refactor(data): unify organization and evidence primary ids
Closes #251
